# pyscreener

./: .bumpversion.cfg  .flake8  .gitattributes  .gitignore  .lgtm.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.IN  MANIFEST.in  Makefile  README.md  check_environment.sh  environment.yaml  environment.yml  generate_input_map.py  paper.md  pyproject.toml  readthedocs.yml  refs.bib  requirements.txt  run.py  run_class.py  run_funcs.py  run_pyscreener_distributed_example.batch  setup.cfg  setup.py  submit_pyscreener_distributed.batch  submit_pyscreener_distributed_example.batch  submit_tests.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  test-env.yml
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: CI.yaml  draft-pdf.yaml  lint.yaml  publish.yaml
devtools/: README.md
devtools/conda-envs/: requirements.txt  test_env.yaml
docs/: Makefile  README.md  api.rst  conf.py  getting_started.rst  index.rst  make.bat  requirements.yaml
docs/autosummary/: pyscreener.preprocessing.rst
examples/: examples.ipynb  run_ps_vina.sh  run_pyscreener_distributed_example.batch
integration-tests/configs/: test_autobox.ini  (+5 more)
pyscreener/: __init__.py  _version.py  args.py  base.py  check.py  exceptions.py  funcs.py  main.py  postprocessing.py  preparation.py  preprocessing.py  screening.py  supply.py  utils.py  warnings.py
scripts/: get_files.py
test/: test_data.py  test_supply.py  test_utils.py  test_vina_runner.py  test_vina_utils.py
test_configs/: test_autobox.ini  test_cluster.ini  test_dock.ini  test_many_lig_files.ini  test_pdbid.ini  test_repeats.ini  test_vina.ini  test_viz.ini
testing_inputs/: test_ligands.csv  test_ligands_2.csv
tests/: test_autobox.py  test_data.py  test_supply.py  test_vina_runner.py
(+98 files in other folders)
