[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "pyscreener/_version.py"

[tool.pytest.ini_options]
addopts = "--cov pyscreener"

[tool.coverage.run]
branch = true
omit = [
    "pyscreener/dft/*",
    "pyscreener/md/*",
    "pyscreener/docking/dock/scripts/*"
]

[tool.black]
line-length = 100
target-version = ["py38"]
skip-magic-trailing-comma = true
